# bpt

./: .gitignore  pyproject.toml  requirements.txt  setup_vm.sh
bpt/: scratch.ipynb  smoke_test.py
bpt/bradgrad/: bradgrad_demo.ipynb  compute.py  grads.ipynb  trace_graph.ipynb
bpt/chess/: data_parsing.ipynb  schemas.py  toy_runs.ipynb
bpt/kapathy_videos/: building_micrograd.ipynb
bpt/kapathy_videos/gpt/build_from_scratch/: bigram.py  build_from_scratch.ipynb  gpt.py
bpt/kapathy_videos/gpt/tokenisation/: tokenisation.ipynb
bpt/kapathy_videos/gpt2/: data_loader.py  model.py  monitoring.py  play.ipynb  train.py
bpt/kapathy_videos/makemore/: building_makemore_part_1.ipynb  part_1_bigrams.ipynb  part_2_mlp.ipynb  part_3_activations_grads_batchnorm.ipynb  part_4_backprop_ninja.ipynb  part_5_wave_net.ipynb
bpt/kapathy_videos/micrograd/: building_micrograd.ipynb
bpt/vision/: hello_torchvision.ipynb  helpers.py
post_training/: agent.txt  play.ipynb
tests/bradgrad/: test_compute.py
