[tool.poetry]
name = "bpt"
version = "0.1.0"
description = ""
authors = ["bjk95 <bradley.kester@barcelonagse.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.3"
numpy = "^2.2.3"
matplotlib = "^3.10.0"
torch = "^2.6.0"
scikit-learn = "^1.6.1"
torchvision = "^0.21.0"
tiktoken = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
